@@ -26,7 +26,7 @@ distribution.
 
 // The goal of the seperate error file is to make the first
 // step towards localization. tinyxml (currently) only supports
-// latin-1, but at least the error messages could now be translated.
+// english error messages, but the could now be translated.
 //
 // It also cleans up the code a bit.
 //
