@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8" ?>
 <document>
     <English name="name" value="value">The world has many languages</English>
     <Russian name="название(имя)" value="ценность">Мир имеет много языков</Russian>
