@@ -203,4 +203,8 @@ Changes in version 2.1.5
 - Removed extraneous 'const', thanks David Aldrich
 - First pass at switching to the "safe" stdlib functions. Many people have suggested and
   pushed on this, but Warren Stevens put together the first proposal.
+- TinyXml now will do EOL normalization before parsing, consistent with the W3C XML spec.
+- Documents loaded with the UTF-8 BOM will now save with the UTF-8 BOM. Good suggestion 
+  from 'instructor_'
+
 
